k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tengen-tetris
spec:
  selector:
    app: tengen-tetris
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
