k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tengen-tetris
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: tengen-tetris.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tengen-tetris
            port:
              number: 8080
